Better no destination message UI

--- a/src/modules/Common/containers/Container.module.css
+++ b/src/modules/Common/containers/Container.module.css
@@ -132,7 +132,15 @@
   }
 
   &.container__alignXleft {
-    margin-left: 0;
+    justify-content: flex-start;
+  }
+
+  &.container__alignXright {
+    justify-content: flex-end;
+  }
+
+  &.container__alignXcenter {
+    justify-content: center;
   }
 }
 
