--- a/src/components/Drawer/Drawer.module.css
+++ b/src/components/Drawer/Drawer.module.css
@@ -1,6 +1,6 @@
 .wrapper {
   background: var(--colorWhite);
-
+  box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   width: 0;
   position: fixed;
   transition: all 300ms;
