Add way to remove parts of the document
This is especially useful to hide newsletter popups
Closes #27 Closes #22

--- a/src/pages/service.module.css
+++ b/src/pages/service.module.css
@@ -65,6 +65,14 @@
   }
 }
 
+.moreinfo {
+  margin-top: calc(-1 * var(--mXS));
+  font-style: italic;
+  margin-bottom: var(--mXS);
+  display: block;
+  font-size: 12px;
+}
+
 .selectionItem {
   display: flex;
   align-items: flex-start;
