Improve Drawer UIX

--- a/src/modules/Common/components/Button.module.css
+++ b/src/modules/Common/components/Button.module.css
@@ -43,6 +43,10 @@
   &.sm {
     font-size: 0.8em;
     padding: var(--pXS) var(--pM);
+
+    &.button__hasOnlyIcon {
+      padding: var(--pXS);
+    }
   }
 
   &:disabled {
