--- a/src/modules/Common/styles/elements/form.css
+++ b/src/modules/Common/styles/elements/form.css
@@ -4,7 +4,7 @@ textarea {
   font-size: 1.6rem;
   border-radius: 4px;
   background-color: var(--colorWhite);
-  padding: var(--pS) var(--pM);
+  padding: var(--pXS) var(--pS);
   border: 1px solid var(--colorBlack400);
   width: 100%;
   color: var(--colorBlack800);
