Fix select icon position

--- a/src/modules/Common/styles/elements/form.css
+++ b/src/modules/Common/styles/elements/form.css
@@ -65,7 +65,7 @@ label {
   }
 
   & svg {
-    top: var(--mM);
+    top: var(--mS);
     right: var(--mS);
     position: absolute;
     pointer-events: none;
