--- a/src/modules/Common/components/Dialog.module.css
+++ b/src/modules/Common/components/Dialog.module.css
@@ -35,6 +35,11 @@
   border-radius: 4px;
 }
 
+.dialog_content--full-page {
+  max-width: calc(100% - 20px);
+  max-height: calc(100% - 20px);
+}
+
 @media (--mobileExtraLarge) {
   .content {
     max-width: 100%;
