--- a/src/modules/Common/styles/custom-properties.css
+++ b/src/modules/Common/styles/custom-properties.css
@@ -17,6 +17,7 @@
   --colorSecondary: #0b08a0;
   --colorTertiary: #f9dd3f;
   --colorDarkedSecondary: #b4656f;
+  --colorWarning: #ffba08;
   --colorError: #ec368d;
   --colorSuccess: #11ebc3;
   --colorBlack900: #010613;
