Add correct background on disabled elements in form

--- a/src/modules/Common/styles/elements/form.css
+++ b/src/modules/Common/styles/elements/form.css
@@ -21,6 +21,11 @@ input:is([disabled]):not([type='submit']) textarea:disabled {
   background-color: var(--colorBlack400);
 }
 
+input[disabled] {
+  background-color: var(--colorBlack200);
+  cursor: not-allowed;
+}
+
 input[type='checkbox'] {
   width: 2rem;
   height: 2rem;
