Always make links with cursor pointer

--- a/src/modules/Common/styles/elements/links.css
+++ b/src/modules/Common/styles/elements/links.css
@@ -2,6 +2,7 @@ a {
   color: var(--colorPrimary);
   text-decoration: none;
   transition: all 0.3s easeOutExpo;
+  cursor: pointer;
 
   &:hover {
     color: var(--colorSecondary);
