--- a/src/pages/service.module.css
+++ b/src/pages/service.module.css
@@ -211,3 +211,17 @@
   font-size: 0.8em;
   text-align: right;
 }
+
+.linkToSnapshot {
+  position: absolute;
+  background: rgba(255, 255, 255, 0.9);
+  border: 1px solid var(--colorBlack200);
+  color: black;
+  padding: var(--pXS);
+  bottom: 10px;
+  right: 10px;
+  border-radius: 4px;
+  &:hover {
+    background: rgba(255, 255, 255, 1);
+  }
+}
