--- a/src/pages/service.module.css
+++ b/src/pages/service.module.css
@@ -15,6 +15,7 @@
 
 .main {
   position: relative;
+  flex: 1;
 }
 
 .drawer {
@@ -77,35 +78,39 @@
 }
 
 .formWrapper {
+  height: auto !important;
+  flex: 1;
+  overflow: auto;
   padding: 0 var(--mM) var(--mL) var(--mM);
 }
 
 .formBottom {
   margin-top: auto;
-  padding: var(--mM) var(--mM);
+  padding: var(--mXS) var(--mXS);
 }
 
 .formInfos {
   border-top: 1px solid var(--colorBlack200);
-  padding-top: var(--mM);
-  padding-bottom: var(--mM);
+  padding-top: var(--mXS);
+  padding-bottom: var(--mXS);
 }
 
 .formActions {
   border-top: 1px solid var(--colorBlack400);
-  padding-top: var(--mM);
+  padding: var(--mXS);
   display: flex;
-  justify-content: flex-end;
-  gap: var(--mL);
+  justify-content: space-between;
 }
 
 .wrapper {
   display: flex;
   align-items: flex-start;
+}
 
-  & > div {
-    flex: 1;
-  }
+.drawerWrapper {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
 .moreinfo {
