--- a/src/pages/service.module.css
+++ b/src/pages/service.module.css
@@ -102,6 +102,15 @@
   justify-content: space-between;
 }
 
+.contribute {
+  font-size: 0.8em;
+  text-align: right;
+  padding: 0 var(--pXS) var(--pXS);
+  & a {
+    display: block;
+  }
+}
+
 .wrapper {
   display: flex;
   align-items: flex-start;
